# project-name

./: .cookiecutter.json  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  bandit.yml  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.md  reference.md  usage.md
src/project_name/: __init__.py  __main__.py
tests/: __init__.py  main_test.py
