[tool.poetry]
name = "project-name"
version = "0.0.0"
description = "Project Name"
authors = ["Jonas Gerber <73141623+Traenqui@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Traenqui/project-name"
repository = "https://github.com/Traenqui/project-name"
documentation = "https://project-name.readthedocs.io"
classifiers = ["Development Status :: 1 - Planning"]

[tool.poetry.urls]
Changelog = "https://github.com/Traenqui/project-name/releases"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"


[tool.poetry.dev-dependencies]


[tool.poetry.scripts]
project-name = "project_name.__main__:main"

[tool.poetry.group.dev.dependencies]
pygments = "^2.18.0"
bandit = "^1.7.10"
black = "^24.10.0"
darglint = "^1.8.1"
flake8 = "^7.1.1"
flake8-bugbear = "^24.10.31"
flake8-docstrings = "^1.7.0"
flake8-rst-docstrings = "^0.3.0"
furo = "^2024.8.6"
isort = "^5.13.2"
mypy = "^1.13.0"
coverage = {version = "^7.6.4", extras = ["toml"]}
pep8-naming = "^0.14.1"
pre-commit = "^4.0.1"
pre-commit-hooks = "^5.0.0"
pytest = "^8.3.3"
pyupgrade = "^3.19.0"
safety = "^3.2.10"
sphinx = "^8.1.3"
sphinx-autobuild = "^2024.10.3"
sphinx-click = "^6.0.0"
typeguard = "^4.4.1"
myst-parser = "^4.0.0"
xdoctest = {version = "^1.2.0", extras = ["colors"]}

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["project_name", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
